fix: file type wrapping

--- a/web/app/download/page.module.scss
+++ b/web/app/download/page.module.scss
@@ -51,6 +51,7 @@
     font-size: .9rem;
     overflow: hidden;
     text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .row {
